@@ -1,5 +1,12 @@
 2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	Source clean up.
+
+	* src/worddef.h (isPunc):
+	  - Drop unused and meaningless function.
+
+2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	Handle CR (80..A0) non-Thai chars in RTF
 
 	* src/worddef.h (isThai, tis2uni):
